workloads/seaweedfs/volume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seaweedfs-volume
  labels: {app: seaweedfs-volume}
spec:
  replicas: 1
  strategy: {type: Recreate}
  selector: {matchLabels: {app: seaweedfs-volume}}
  template:
    metadata: {labels: {app: seaweedfs-volume}}
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - nas
      terminationGracePeriodSeconds: 120
      containers:
      - name: volume
        image: chrislusf/seaweedfs:4.46
        args:
        - "volume"
        - "-mserver=seaweedfs-master:9333"
        - "-port=8080"
        - "-dir=/data"
        - "-index=leveldb"
        ports: [{containerPort: 8080}]
        resources:
          requests: {memory: "3Gi", cpu: "1000m"}
          limits: {memory: "3Gi", cpu: "1000m"}
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        hostPath:
          path: /tank/seaweedfs-data
          type: DirectoryOrCreate
