workloads/seaweedfs/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: seaweedfs-s3
spec:
  selector: {app: seaweedfs-filer}
  ports: [{port: 8333, targetPort: 8333}]
---
apiVersion: v1
kind: Service
metadata:
  name: seaweedfs-filer-www
spec:
  selector: {app: seaweedfs-filer}
  ports: [{port: 8888, targetPort: 8888}]
