workloads/seaweedfs/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seaweedfs-filer-ui
  namespace: default
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: files-ui-ts-2143-https
  hostnames:
    - files-ui.ts.2143.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: lan-only
      backendRefs:
        - name: seaweedfs-filer-www
          port: 8888
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seaweedfs-s3
  namespace: default
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: files-john2143-https
  hostnames:
    - files.john2143.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: crowdsec-bouncer-noappsec
      backendRefs:
        - name: seaweedfs-s3
          port: 8333
